[tool.poetry]
name = "jwt_smithy"
version = "0.1.0"
description = ""
authors = ["ilyakochankov <ilyakochankov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
PyJWT = {extras = ["crypto"], version = "^2.4.0"}
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
